# FileManager

./: CMakeLists.txt  readme.md  run_gtest.sh  run_tests.sh
design/: class_diagram.plantuml
impl/: CMakeLists.txt
impl/inc/: device.hpp  file.hpp  file_manager.hpp  i_file.hpp  resource.hpp  resource_manager.hpp
impl/src/: device.cpp  file.cpp  file_manager.cpp  resource.cpp  resource_manager.cpp
test/: CMakeLists.txt  device_test.cpp  file_manager_test.cpp  file_test.cpp  resource_manager_test.cpp  resource_test.cpp
